==> ianjuch/ee149/CC3000 SDK_V1.11/CC3000 SDK/MSP430G2553/Basic WiFi Application/Basic WiFi Source/Source/CC3000 Spi/spi.c <==
#include "hci.h"
#include "spi.h"
#include "evnt_handler.h"
#include "board.h"
#include <msp430.h>
#define READ                    3
#define WRITE                   1
#define HI(value)               (((value) & 0xFF00) >> 8)
#define LO(value)               ((value) & 0x00FF)
#define ASSERT_CS()          (P3OUT &= ~BIT6)//(P2OUT &= ~BIT7)
#define DEASSERT_CS()        (P3OUT |= BIT6)//(P2OUT |= BIT7)
#define HEADERS_SIZE_EVNT       (SPI_HEADER_SIZE + 5)
#define SPI_HEADER_SIZE			(5)
#define 	eSPI_STATE_POWERUP 				 (0)
#define 	eSPI_STATE_INITIALIZED  		 (1)
#define 	eSPI_STATE_IDLE					 (2)
#define 	eSPI_STATE_WRITE_IRQ	   		 (3)
#define 	eSPI_STATE_WRITE_FIRST_PORTION   (4)
#define 	eSPI_STATE_WRITE_EOT			 (5)
#define 	eSPI_STATE_READ_IRQ				 (6)
#define 	eSPI_STATE_READ_FIRST_PORTION	 (7)
#define 	eSPI_STATE_READ_EOT				 (8)
#define CC3000_BUFFER_MAGIC_NUMBER (0xDE)

int init_spi(void)
{
  P3DIR |= BIT6;//???
	// Select the SPI lines: MISO/MOSI on P1.6,7 
	MOSI_MISO_PORT_SEL2 &= ~(SPI_MISO_PIN + SPI_MOSI_PIN);
	//MOSI_MISO_PORT_SEL |= (SPI_MISO_PIN + SPI_MOSI_PIN);
	MOSI_MISO_PORT_SEL |= (SPI_MISO_PIN + SPI_MOSI_PIN); //TODO: can't find in datasheet?
                  
                    //SPI CLK on P1.5                                                                                
	SPI_CLK_PORT_SEL2 &= ~(SPI_CLK_PIN);
	//SPI_CLK_PORT_SEL2 |= (SPI_CLK_PIN);
	SPI_CLK_PORT_SEL |= (SPI_CLK_PIN);

                    
	//UCB0CTL1 |= UCSWRST;                     // **Put state machine in reset**
	UCA0CTL1 |= UCSWRST;                     // **Put state machine in reset**
	//UCB0CTL0 |= (UCMST+UCSYNC+UCMSB);   	// 3-pin, 8-bit SPI master
	UCA0CTL0 |= (UCMST+UCSYNC+UCMSB);   	// 3-pin, 8-bit SPI master
	                                          // Clock polarity high, MSB
	//UCB0CTL1 |= UCSSEL_2;                    // ACLK
	UCA0CTL1 |= UCSSEL_2;                    // ACLK
	//UCB0BR0 = 0x10;                           // /2 change to /1
	UCA0BR0 = 0x10;                           // /2 change to /1
	//UCB0BR1 = 0;                              //
	UCA0BR1 = 0;                              //

	//UCB0CTL1 &= ~UCSWRST;                    // **Initialize USCI state machine**
	UCA0CTL1 &= ~UCSWRST;                    // **Initialize USCI state machine**
    
    return(ESUCCESS);
}

long
SpiFirstWrite(unsigned char *ucBuf, unsigned short usLength)
{
    //
    // workaround for first transaction
    //
    ASSERT_CS();
	
    // Assuming we are running on 24 MHz ~50 micro delay is 1200 cycles;
    __delay_cycles(1200);
	
    // SPI writes first 4 bytes of data
    SpiWriteDataSynchronous(ucBuf, 4);

    __delay_cycles(1200);
	
    SpiWriteDataSynchronous(ucBuf + 4, usLength - 4);

    // From this point on - operate in a regular way
    sSpiInformation.ulSpiState = eSPI_STATE_IDLE;
    
    DEASSERT_CS();

    return(0);
}

void
SpiWriteDataSynchronous(unsigned char *data, unsigned short size)
{
	while (size)
    {   	
        while (!(TXBufferIsEmpty()));
		//UCB0TXBUF = *data;
		UCA0TXBUF = *data;
		while (!(RXBufferIsEmpty()));
		//UCB0RXBUF;
		UCA0RXBUF;
		size --;
        data++;
    }
}

void
SpiReadDataSynchronous(unsigned char *data, unsigned short size)
{
	long i = 0;
    unsigned char *data_to_send = tSpiReadHeader;
	
	for (i = 0; i < size; i ++)
    {
    	while (!(TXBufferIsEmpty()));
			//Dummy write to trigger the clock
		//UCB0TXBUF = data_to_send[0];
		UCA0TXBUF = data_to_send[0];
		while (!(RXBufferIsEmpty()));
		//data[i] = UCB0RXBUF;
		data[i] = UCA0RXBUF;
    }
}
